scss website overflow layout fix

--- a/components/Layout.module.scss
+++ b/components/Layout.module.scss
@@ -1,3 +1,11 @@
 .mainContent {
   margin-top: 140px;
 }
+
+.siteContent {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+}
